fixed container alignment

--- a/src/style.css
+++ b/src/style.css
@@ -92,7 +92,7 @@ h4 {
   font-size: 20px;
   border-radius: 6px;
   background-color: var(--background-color);
-  padding: 2%;
+  padding: 3%;
   display: block;
   margin: 0 auto;
   margin-top: 20px;
